--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -43,7 +43,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.derby.jar}:\
     ${file.reference.derbyclient.jar}:\
-    ${file.reference.derbyshared.jar}
+    ${file.reference.derbyshared.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
