--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,13 +38,15 @@ excludes=
 file.reference.derby.jar=src/lib/derby.jar
 file.reference.derbyclient.jar=src/lib/derbyclient.jar
 file.reference.derbyshared.jar=src/lib/derbyshared.jar
+file.reference.flatlaf-3.6.jar=src/lib/flatlaf-3.6.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.derby.jar}:\
     ${file.reference.derbyclient.jar}:\
     ${file.reference.derbyshared.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.flatlaf-3.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
