--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -82,7 +82,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=HotelCaseStudy
-main.class=hotelcasestudy.login_menu
+main.class=hotelcasestudy.USER_login_menu
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
