ADMIN_DASHBOARD NAGAWA NA ANG ICON - CALUB

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -86,7 +86,7 @@ main.class=hotelcasestudy.USER_login_menu
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_24
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
