--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,6 +39,7 @@ file.reference.derby.jar=src/lib/derby.jar
 file.reference.derbyclient.jar=src/lib/derbyclient.jar
 file.reference.derbyshared.jar=src/lib/derbyshared.jar
 file.reference.flatlaf-3.6.jar=src/lib/flatlaf-3.6.jar
+file.reference.jcalendar-1.4.jar=src/lib/jcalendar-1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -46,7 +47,8 @@ javac.classpath=\
     ${file.reference.derbyclient.jar}:\
     ${file.reference.derbyshared.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.flatlaf-3.6.jar}
+    ${file.reference.flatlaf-3.6.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
